# TP-Thirsty-Lang-Official

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  LICENSE  README.md  SECURITY.md  SETUP_CHECKLIST.txt  SHIPPING.md  docker-compose.yml  docker-quick.bat  docker-quick.sh  pyproject.toml
.github/workflows/: docker.yml  release.yml  smoke.yml
docs/: FEATURES.md  GRAMMAR.md  LANGUAGE_SPEC.md  PRODUCTION_DEPLOYMENT.md  SIGNING.md  STATUS.md  THREAT_MODEL.md  WHITEPAPER.md  governance_model.md  index.html  search.js
docs/operations/: CONTINUITY_MAP.md
docs/src/: index.html  search.js  utf.html
docs/src/utf/: console.html  shadow_thirst.html  tarl.html  thirst_of_gods.html  thirsty_lang.html  tscg.html  tscg_b.html
docs/src/utf/shadow_thirst/: cli.html  convergence.html  core.html
docs/src/utf/tarl/: cli.html  core.html  runtime.html
docs/src/utf/tscg/: cli.html  core.html
docs/src/utf/tscg_b/: cli.html  core.html
plans/: execute_plan.md
src/psia/: __init__.py  core.py
src/thirsty_lang/: __init__.py
src/utf/: __init__.py  console.py
src/utf/examples/: gods.thirstofgods  hello.tarl
src/utf/examples/governed_agent_runner/: main.thirsty  policy.tarl
src/utf/shadow_thirst/: __init__.py  cli.py  convergence.py  core.py
src/utf/tarl/: __init__.py  analyzer.py  archive.py  authority.py  broker.py  cli.py  clock.py  composer.py  core.py  durable.py  escalation.py  explainer.py  keystore.py  linter.py  lsp.py  pathguard.py  runtime.py  schema.py  spec.py  tester.py  verifier.py
src/utf/thirst_of_gods/: __init__.py  cli.py  core.py
src/utf/thirsty_lang/: __init__.py  ast.py  checker.py  cli.py  diagnostics.py  formatter.py  interpreter.py  lexer.py  module_system.py  package_manager.py  parser.py  proof_obligations.py  token.py  typesys.py
src/utf/tscg/: __init__.py  cli.py  core.py
src/utf/tscg_b/: __init__.py  cli.py  core.py
tests/: test_broker_unified_gate.py  test_checker_coverage.py  test_cli_build.py  test_cli_lsp.py  test_cli_main.py  test_cli_shadow_gods.py  test_cli_tarl.py  test_cli_tarl_hardening.py  test_cli_tscg.py  test_durable_state.py  test_examples.py  test_file_imports.py  test_formatter.py  test_gate_fail_closed.py  test_governance_maximal.py  test_interpreter_coverage.py  test_keystore.py  test_language_features.py  test_language_fixes.py  test_lexer.py  test_module_system_full.py  test_new_language_features.py  test_package_manager.py  test_parser_coverage.py  test_parser_precedence.py  test_peer_review_060_regressions.py  test_peer_review_0_8_1_tarl_regressions.py  test_production_acceptance.py  test_proof_obligations.py  test_review_0_8_1.py  test_shadow_thirst.py  test_small_modules.py  test_tarl.py  test_tarl_analyzer.py  test_tarl_composition.py  test_tarl_core_eval.py  test_tarl_lsp.py  test_tarl_phase6.py  test_tarl_proof.py  test_tarl_small.py  (+24 more)
