[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "thirsty-lang"
version = "0.1.4"
description = "A governance-first programming language family"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "Thirsty's Projects LLC" },
]
keywords = ["programming-language", "governance", "security", "language"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Compilers",
    "Topic :: Security",
    "Topic :: System :: Distributed Computing",
]

[project.urls]
"Homepage" = "https://github.com/IAmSoThirsty/Thirstys-Projects-Thirsty-Lang-UTF"
"Source" = "https://github.com/IAmSoThirsty/Thirstys-Projects-Thirsty-Lang-UTF"
"Bug Tracker" = "https://github.com/IAmSoThirsty/Thirstys-Projects-Thirsty-Lang-UTF/issues"

[project.scripts]
thirsty = "utf.thirsty_lang.cli:main"
thirst-of-gods = "utf.thirst_of_gods.cli:main"
tscg = "utf.tscg.cli:main"
tscg-b = "utf.tscg_b.cli:main"
tarl = "utf.tarl.cli:main"
shadow-thirst = "utf.shadow_thirst.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["utf.*", "utf", "thirsty_lang"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]