[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "thirsty-lang"
version = "0.4.0"
description = "A governance-first programming language family"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "Thirsty's Projects LLC" },
]
keywords = ["programming-language", "governance", "security", "language"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Compilers",
    "Topic :: Security",
    "Topic :: System :: Distributed Computing",
]

[project.urls]
"Homepage" = "https://github.com/IAmSoThirsty/Thirstys-Projects-Thirsty-Lang-UTF"
"Source" = "https://github.com/IAmSoThirsty/Thirstys-Projects-Thirsty-Lang-UTF"
"Bug Tracker" = "https://github.com/IAmSoThirsty/Thirstys-Projects-Thirsty-Lang-UTF/issues"

[project.scripts]
thirsty = "utf.thirsty_lang.cli:main"
thirst-of-gods = "utf.thirst_of_gods.cli:main"
tscg = "utf.tscg.cli:main"
tscg-b = "utf.tscg_b.cli:main"
tarl = "utf.tarl.cli:main"
tarl-lsp = "utf.tarl.lsp:main"
shadow-thirst = "utf.shadow_thirst.cli:main"

[project.optional-dependencies]
test = ["pytest>=7.0", "pytest-cov>=4.0"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "black>=23.0", "ruff>=0.1.0", "mypy>=1.0"]
docs = ["sphinx>=5.0", "sphinx-rtd-theme>=1.2"]
analysis = ["z3-solver>=4.12"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["utf.*", "utf", "thirsty_lang"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # Pyflakes
  "I",    # isort
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "UP",   # pyupgrade
]
ignore = ["E501"]  # line too long (handled by black)

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true